--- a/client/booking/package.json
+++ b/client/booking/package.json
@@ -24,7 +24,7 @@
     "@angular/compiler": "~12.1.0-",
     "@angular/core": "~12.1.0-",
     "@angular/forms": "~12.1.0-",
-    "@angular/material": "^12.1.3",
+    "@angular/material": "^12.2.13",
     "@angular/material-moment-adapter": "^12.2.9",
     "@angular/platform-browser": "~12.1.0-",
     "@angular/platform-browser-dynamic": "~12.1.0-",
@@ -36,6 +36,7 @@
     "@types/lodash": "^4.14.171",
     "angular-responsive-carousel": "^2.1.2",
     "async": "^3.2.1",
+    "bootstrap": "^5.2.3",
     "crypto-js": "^4.1.1",
     "detect-touch-device": "^1.1.6",
     "echarts": "^5.2.0",
@@ -54,7 +55,7 @@
     "moment-timezone": "^0.5.28",
     "ng-circle-progress": "~1.6.0",
     "ng-pluralize": "^1.1.0",
-    "ngx-bootstrap": "^5.6.1",
+    "ngx-bootstrap": "^5.6.2",
     "ngx-dropzone": "^3.1.0",
     "ngx-echarts": "^7.1.0",
     "ngx-infinite-scroll": "^10.0.1",
@@ -64,6 +65,7 @@
     "ngx-smart-popover": "^1.4.0",
     "ngx-toastr": "^14.0.0",
     "pdf-lib": "^1.17.1",
+    "popper.js": "^1.12.3",
     "powerbi-client": "^2.22.2",
     "powerbi-client-angular": "^3.0.5",
     "quill": "^1.3.7",
