--- a/client/booking/package.json
+++ b/client/booking/package.json
@@ -18,7 +18,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.1.0-",
+    "@angular/animations": "^12.1.5",
     "@angular/cdk": "^12.1.3",
     "@angular/common": "~12.1.0-",
     "@angular/compiler": "~12.1.0-",
@@ -37,6 +37,7 @@
     "angular-responsive-carousel": "^2.1.2",
     "async": "^3.2.1",
     "bootstrap": "^5.2.3",
+    "bulma": "^0.9.4",
     "crypto-js": "^4.1.1",
     "detect-touch-device": "^1.1.6",
     "echarts": "^5.2.0",
@@ -63,7 +64,7 @@
     "ngx-quill": "^14.3.0",
     "ngx-skeleton-loader": "^5.0.0",
     "ngx-smart-popover": "^1.4.0",
-    "ngx-toastr": "^14.0.0",
+    "ngx-toastr": "^14.3.0",
     "pdf-lib": "^1.17.1",
     "popper.js": "^1.12.3",
     "powerbi-client": "^2.22.2",
